--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   background-color: #ccd5ae;
   font-size: 30px;
   padding: 1rem;
+  text-decoration: none;
 }
 .header h1 {
   font-family: "Lobster Two", cursive;
@@ -99,6 +100,7 @@
 .project-title-footer {
   font-family: "Lobster Two", cursive;
   font-style: italic;
+  text-decoration: none;
   color: #ffffff;
 }
 
