--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,42 @@
   margin-top: 1rem;
 }
 
+.user-bar-loggedIn-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.user-bar-loggedIn-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 1rem;
+}
+
+.user-bar-loggedIn-btn-wrapper {
+  justify-self: flex-end;
+
+  /* flex-direction: column; */
+  margin: 0 1rem;
+}
+
+.user-bar-loggedIn-btn {
+  background-color: #d4a373;
+  justify-self: flex-end;
+
+  font-size: 0.8rem;
+  font-style: normal;
+  margin: 0.5rem 1rem;
+  padding: 0.5rem;
+  border-radius: 12px;
+  text-decoration: none;
+  border: none;
+}
+
+.user-bar-loggedIn-btn:hover {
+  background-color: #faedcd;
+}
+
 .user-bar-login-out {
   background-color: #d4a373;
   font-size: 0.8rem;
@@ -56,6 +92,14 @@
 .user-bar-login-out:hover {
   color: #faedcd;
 }
+
+.user-bar-loggedIn-text {
+  text-decoration: none;
+  font-size: 0.8rem;
+  font-style: normal;
+  color: #000;
+}
+
 .central-area {
   flex: 1;
 }
