--- a/src/App.css
+++ b/src/App.css
@@ -297,10 +297,9 @@ footer {
 }
 
 /*post-page*/
-input[type='text'],
+input[type="text"],
 select,
 textarea {
-
   width: 80%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -326,7 +325,6 @@ input[type="email"] {
   resize: vertical;
 }
 
-
 /* input[type="checkbox"] {
   width: 50%;
   padding: 12px;
@@ -336,7 +334,6 @@ input[type="email"] {
   resize: vertical;
 } */
 
-
 label {
   padding: 12px 12px 12px 0;
   /* display: inline-block; */
@@ -345,7 +342,7 @@ label {
   float: right;
 }
 
-input[type='submit'] {
+input[type="submit"] {
   background-color: #4caf50;
   color: white;
   padding: 12px 20px;
@@ -370,14 +367,14 @@ input[type='submit'] {
   margin-top: 6px;
 }
 .row:after {
-  content: '';
+  content: "";
   display: table;
   clear: both;
 }
 @media screen and (max-width: 600px) {
   .col-25,
   .col-75,
-  input[type='submit'] {
+  input[type="submit"] {
     width: 100%;
     margin-top: 0;
   }
@@ -396,7 +393,6 @@ input[type='submit'] {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 .item-image {
   display: flex;
@@ -433,7 +429,6 @@ form {
     align-items: center;
   }
 }
-
 
 /* .login-container {
   
@@ -568,3 +563,34 @@ form {
   }
 }
 
+/************************** dashboard ***********************/
+.dashboard-btns {
+  background-color: #faedcd;
+  font-size: 0.8rem;
+  margin: 1rem 0 1rem 0;
+  border-radius: 12px;
+  padding: 0.6rem 0.8rem;
+  border: none;
+  transition: all 0.3s ease 0s;
+  font-weight: bold;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.dashboard-btns:hover {
+  color: #ffffff;
+  background-color: #d4a373;
+  box-shadow: 0px 15px 20px rgba(204, 213, 174, 0.4);
+  color: #fff;
+  transform: translateY(-3px);
+}
+.dashboard-btns:focus {
+  outline:  none;
+  background-color: #d4a373;
+
+}
+
+.btn-container{
+  display: flex;
+  justify-content:space-evenly;
+}
