amend dashboard functionality and do some styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
 .App {
@@ -19,7 +19,7 @@
   text-decoration: none;
 }
 .header h1 {
-  font-family: "Lobster Two", cursive;
+  font-family: 'Lobster Two', cursive;
 }
 .user-bar {
   display: flex;
@@ -90,16 +90,19 @@
   flex: 1;
 }
 .individualItem-container {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
+
 .individualItem-card {
   margin: 2em;
 }
+
 .individualItem-item-image {
   width: 300px;
   height: 300px;
   border-radius: 12px;
 }
+
 @media only screen and (max-width: 330px) {
   .individualItem-item-image {
     width: 200px;
@@ -146,7 +149,7 @@
   background-color: #d4a373;
 }
 .project-title-footer {
-  font-family: "Lobster Two", cursive;
+  font-family: 'Lobster Two', cursive;
   font-style: italic;
   text-decoration: none;
   color: #ffffff;
@@ -232,7 +235,7 @@
   text-align: start;
   text-decoration: none;
   color: #000;
-  margin: 0.2rem 0;
+  margin: 0.2rem 0.4rem;
 }
 .itemsListTitle :nth-child(2) {
   font-weight: bold;
@@ -292,12 +295,12 @@ footer {
 }
 
 .thumbnailImageStyle {
-  max-width: 120px;
-  max-height: 120px;
+  max-width: 150px;
+  max-height: 150px;
 }
 
 /*post-page*/
-input[type="text"],
+input[type='text'],
 select,
 textarea {
   width: 80%;
@@ -307,7 +310,7 @@ textarea {
   box-sizing: border-box;
   resize: vertical;
 }
-input[type="password"] {
+input[type='password'] {
   width: 80%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -316,7 +319,7 @@ input[type="password"] {
   resize: vertical;
 }
 
-input[type="email"] {
+input[type='email'] {
   width: 80%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -342,7 +345,7 @@ label {
   float: right;
 }
 
-input[type="submit"] {
+input[type='submit'] {
   background-color: #4caf50;
   color: white;
   padding: 12px 20px;
@@ -367,14 +370,14 @@ input[type="submit"] {
   margin-top: 6px;
 }
 .row:after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
 @media screen and (max-width: 600px) {
   .col-25,
   .col-75,
-  input[type="submit"] {
+  input[type='submit'] {
     width: 100%;
     margin-top: 0;
   }
@@ -585,12 +588,26 @@ form {
   transform: translateY(-3px);
 }
 .dashboard-btns:focus {
-  outline:  none;
+  outline: none;
   background-color: #d4a373;
-
 }
 
-.btn-container{
+.btn-container {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
+}
+
+.dashboard-head {
+  margin-top: 2rem;
+}
+
+.dashboard-header {
+  color: #d4a373;
+  text-align: left;
+  margin-left: 1.2rem;
+}
+
+.reserve-paragraph {
+  text-align: left;
+  margin: 0.6rem 0 1rem 1.2rem;
 }
