--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,16 @@
   padding: 6px 12px;
   text-decoration: none;
 }
+#button-background {
+  background-color: #99582a;
+  padding: 6px 12px;
+  margin: 2px;
+}
+#p-Button-background{
+     background: rgb(250,237,205);
+             padding: 6px 12px;
+             margin: 2px;
+}
 
 /* Footer styling */
 footer {
@@ -575,7 +585,8 @@ form {
 }
 
 @media screen and (max-width: 600px) {
-  .login-container {
+  .login-container 
+  {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -599,9 +610,32 @@ form {
     margin: 0;
     grid-template-columns: 81% 1rem;
   }
+  /****************dashboard ****************/
+  .itemsListPrice {
+    font-size: 1rem;
+  }
 }
 
-/************************** dashboard ***********************/
+/************************** dashboard big screen***********************/
+.item-list-wrapper {
+  display: flex;
+  flex: 0 0 1em;
+}
+.item-descp-wraper{
+  text-align: justify;
+}
+.dashboard-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+.dashboard-wrapper .action-button {
+  background-color: #ee7d59;
+  margin-top: 0.7rem;
+  border-radius: 10px;
+  height: 50px;
+  width: 70px;
+  font-size: 1rem;
+}
 .dashboard-btns {
   background-color: #faedcd;
   font-size: 0.8rem;
