--- a/src/App.css
+++ b/src/App.css
@@ -712,19 +712,18 @@ form {
   padding: 0.8rem;
 }
 
-
 .dashboard-bar {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #d4a373;
   color: white;
+}
 
 .charity-image {
   margin-left: 25rem;
   max-width: 200px;
   max-height: 200px;
-
 }
 
 /************************** dashboard big screen***********************/
@@ -791,7 +790,7 @@ form {
 }
 
 .dashboard-head {
-  font-family: "Lobster Two", cursive;
+  font-family: 'Lobster Two', cursive;
   margin-top: 2rem;
 }
 
@@ -826,7 +825,6 @@ form {
   margin: 2rem 0 1rem 0;
 }
 
-
 .first-and-fifth {
   border-radius: 12px;
   background-color: #ccd5ae;
@@ -846,4 +844,3 @@ form {
   border-radius: 12px;
   background-color: #e9edc9;
 }
-
