--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,6 @@
   justify-content: center;
   align-items: center;
   background-color: #e9edc9;
-  /* width: 100vw; */
-  /* padding: 0.5rem 1rem; */
   margin-top: 1rem;
 }
 .user-bar-loggedIn-container {
@@ -133,10 +131,7 @@
   margin: 1rem;
   font-size: 2rem;
 }
-.individualItem-location {
-}
-.individualItem-sellerUsername {
-}
+
 .individualItem-price {
   display: inline-block;
   border-radius: 12px;
@@ -158,21 +153,26 @@
   font-weight: bold;
   font-size: 1.4em;
 }
+
 .individualItem-name {
   font-weight: bold;
 }
+
 .individualItem-sellerUsername {
   font-weight: bold;
 }
+
 .footer-container {
   background-color: #d4a373;
 }
+
 .project-title-footer {
   font-family: 'Lobster Two', cursive;
   font-style: italic;
   text-decoration: none;
   color: #ffffff;
 }
+
 .donate-btn {
   background-color: #ccd5ae;
   margin: 1em 0 2rem 0;
@@ -184,6 +184,7 @@
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+
 .donate-btn:hover {
   color: #ffffff;
   background-color: #d4a373;
@@ -191,20 +192,24 @@
   color: #fff;
   transform: translateY(-3px);
 }
+
 .donate-btn:focus {
   outline: none;
 }
+
 .wrapping {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 40px;
   margin-bottom: 1rem;
 }
+
 .wrapping > p:last-child {
   grid-column: 2;
   grid-row: 1/2;
   align-self: start;
 }
+
 @media only screen and (min-width: 800px) {
   .individualItem-card {
     display: flex;
@@ -212,10 +217,12 @@
     align-items: flex-start;
     overflow: auto;
   }
+
   .individualItem-item-image {
     display: flex;
     border-radius: 12px;
   }
+
   .wrapping {
     display: flex;
     flex-direction: column;
@@ -223,20 +230,25 @@
     justify-content: flex-start;
     align-content: flex-start;
   }
+
   .wrapping p {
     align-self: flex-start;
     margin: 0.5rem 0;
   }
+
   .individualItem-desktop-description {
     margin: 2rem 10rem;
   }
 }
+
 .individualItem-desktop-description {
   margin: 2rem 1.5rem;
 }
+
 .individualItem-desktop-info {
   margin: 2rem 1.5rem;
 }
+
 .itemsList {
   display: grid;
   grid-template-columns: 300px 300px 300px;
@@ -252,18 +264,21 @@
 .itemsListTitle {
   justify-self: center;
 }
+
 .itemsListTitle p {
   text-align: start;
   text-decoration: none;
   color: #000;
   margin: 0.2rem 0.4rem;
 }
+
 .itemsListTitle :nth-child(2) {
   font-weight: bold;
   text-decoration: none;
   color: #000;
   margin: 0.2rem 0;
 }
+
 .itemsListPrice {
   font-size: 2rem;
   font-weight: bold;
@@ -274,6 +289,7 @@
   justify-self: center;
   align-self: center;
 }
+
 .itemsListPrice button {
   background-color: #ccd5ae;
   margin: 1em;
@@ -302,18 +318,22 @@
     /* gap: 1rem; */
     margin: 0;
   }
+
   .itemsListPicture {
     justify-self: center;
     margin: 0;
   }
+
   .itemsListTitle {
     justify-self: start;
     align-self: start;
     margin: 0;
   }
+
   .itemsListTitle p {
     margin: 0;
   }
+
   .itemsListPrice {
     display: flex;
     margin: -0.4rem 0 0 0;
@@ -321,6 +341,7 @@
     align-self: start;
     justify-self: start;
   }
+
   .itemsListPrice button {
     align-self: start;
     margin: 0 0 0 1rem;
@@ -334,6 +355,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .navigationButtons button {
   margin: 0 0.8rem 0 0.8rem;
   padding: 12px;
@@ -342,6 +364,7 @@
   border-radius: 6px;
   cursor: pointer;
 }
+
 .navigationButtons button:hover {
   background-color: #d4a373;
   color: #fff;
@@ -353,6 +376,7 @@
   justify-content: space-around;
   align-items: center;
 }
+
 .sort-data-item {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -382,6 +406,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
   }
+
   .sort-data-items-wrapper {
     margin: 0.4rem;
   }
@@ -390,6 +415,7 @@
   display: inline-block;
   margin-bottom: 10px;
 }
+
 .p-button {
   border: none;
   border-radius: 3px;
@@ -398,6 +424,7 @@
   padding: 6px 12px;
   text-decoration: none;
 }
+
 #button-background {
   background-color: #99582a;
   color: white;
@@ -406,31 +433,34 @@
   padding: 6px 12px;
   margin: 2px;
 }
+
 #p-Button-background {
   background: rgb(250, 237, 205);
   padding: 6px 12px;
   margin: 2px;
 }
 
-/* Footer styling */
 footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 0.7rem;
 }
+
 .footer-container {
   color: white;
   text-decoration: none;
   font-style: none;
 }
+
 .footer-container:hover {
   color: #ccd5ae;
 }
-/* About us page styling */
+
 .about-us {
   margin: 2rem;
 }
+
 .about-us p {
   margin: 1rem;
 }
@@ -440,7 +470,6 @@ footer {
   max-height: 150px;
 }
 
-/*post-page*/
 input[type='text'],
 select,
 textarea {
@@ -451,6 +480,7 @@ textarea {
   box-sizing: border-box;
   resize: vertical;
 }
+
 input[type='password'] {
   width: 80%;
   padding: 12px;
@@ -487,22 +517,10 @@ input[type='file'] {
   font-size: 1rem;
   resize: vertical;
 }
-/* customize input file **/
-
-/* input[type="checkbox"] {
-  width: 50%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  resize: vertical;
-} */
 
 label {
   padding: 12px 12px 12px 0;
-  /* display: inline-block; */
   font-size: 20px;
-
   float: right;
 }
 
@@ -515,26 +533,31 @@ input[type='submit'] {
   cursor: pointer;
   float: right;
 }
+
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
 }
+
 .col-75 {
   float: left;
   width: 75%;
   margin-top: 6px;
 }
+
 .col-25 {
   float: left;
   width: 25%;
   margin-top: 6px;
 }
+
 .row:after {
   content: '';
   display: table;
   clear: both;
 }
+
 @media screen and (max-width: 600px) {
   .col-25,
   .col-75,
@@ -545,28 +568,30 @@ input[type='submit'] {
 
   label {
     padding: 12px 12px 12px 0;
-    /* display: inline-block; */
     font-size: 20px;
     margin: 0 2.4rem;
     float: left;
-    /* color: red;
-    background-color: red; */
   }
 }
+
 .checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .item-image {
   display: flex;
 }
+
 form {
   margin-top: 10px;
 }
+
 .region {
   margin-bottom: 1rem;
 }
+
 .item-charity {
   margin-top: 10px;
   display: flex;
@@ -574,6 +599,7 @@ form {
   align-items: flex-start;
   border: 1px solid black;
 }
+
 .item-charity-2 {
   justify-content: space-between;
   border: 1px solid black;
@@ -587,19 +613,13 @@ form {
     flex-direction: column;
     align-items: center;
   }
+
   .item-charity-2 {
     flex-direction: column;
     display: flex;
     align-items: center;
   }
 }
-
-/* .login-container {
-  
-
-  justify-content: center;
-  align-items: center;
-} */
 
 .signup-login-header {
   margin: 2rem;
@@ -609,7 +629,6 @@ form {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* align-items: flex-start; */
 }
 
 .sign-up-age-verify {
@@ -624,6 +643,7 @@ form {
   margin: 0 0.4rem 0 3rem;
   font-size: 1rem;
 }
+
 .sign-up-age-verify input {
   transform: scale(1);
 }
@@ -671,8 +691,19 @@ form {
   color: #fff;
   transform: translateY(-3px);
 }
+
 .sign-up-login-btn:focus {
   outline: none;
+}
+
+.further-instructions {
+  display: inline-block;
+  margin: 1rem 0 2rem 0;
+  padding: 0.5rem;
+  border-radius: 12px;
+  font-weight: bold;
+  background-color: #ccd5ae;
+  border: 2px solid black;
 }
 
 .error-message {
@@ -685,7 +716,6 @@ form {
   border: 2px solid black;
 }
 
-/* Login page */
 .forgotten-passwork-link {
   text-decoration: none;
   color: #99582a;
@@ -699,8 +729,6 @@ form {
 .forgotten-passwork-link:visited {
   color: #99582a;
 }
-
-/* About pages */
 
 .about-btns {
   display: flex;
@@ -716,7 +744,6 @@ form {
   border: none;
   transition: all 0.3s ease 0s;
   font-weight: bold;
-  /* box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); */
   cursor: pointer;
 }
 
@@ -787,6 +814,7 @@ form {
   .sign-up-age-verify-container {
     justify-content: flex-start;
   }
+
   .sign-up-age-verify {
     margin: 0 0 0 0;
   }
@@ -794,14 +822,16 @@ form {
   .sign-up-age-verify label {
     margin: 0 2.3rem;
   }
+
   .sign-up-age-verify input {
     margin: 0 0 0 3.8rem;
   }
+
   .sign-up-role-verify {
     margin: 0;
     grid-template-columns: 81% 1rem;
   }
-  /****************dashboard ****************/
+
   .itemsListPrice {
     font-size: 1rem;
   }
@@ -820,8 +850,6 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: #d4a373;
-  color: white; */
 }
 
 .charity-image {
@@ -830,7 +858,6 @@ form {
   max-height: 200px;
 }
 
-/************************** dashboard big screen***********************/
 .item-list-wrapper {
   display: flex;
   flex: 0 0 1em;
@@ -856,7 +883,6 @@ form {
   margin: 0 0.6rem 1rem 0.6rem;
   border-radius: 12px;
   padding: 0.6rem 0.8rem;
-
   border: none;
   transition: all 0.3s ease 0s;
   font-weight: bold;
@@ -871,6 +897,7 @@ form {
   color: #fff;
   transform: translateY(-3px);
 }
+
 .dashboard-btns:focus {
   outline: none;
   background-color: #d4a373;
@@ -894,7 +921,6 @@ form {
 }
 
 .dashboard-head {
-  /* font-family: 'Lobster Two', cursive; */
   margin: 1rem 0;
 }
 
@@ -914,6 +940,7 @@ form {
 .dashboard-msg {
   margin: 1.5rem;
 }
+
 .reserve-paragraph {
   text-align: center;
   margin: 0.6rem 0 1rem 1.2rem;
